# seedpq

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
benches/: README.md  baseline.rs  channels.rs  hair.rs  libpq.rs  seedpq.rs  sfackler_postgres.rs  tinker.rs  tokio_postgres.rs  wtx.rs
benches/common/: common.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: convert.rs  generic.rs  hair.rs  helloworld.rs  macrocheck.rs  send.rs  timestamp.rs
src/: connection.rs  connection_error.rs  connection_raw.rs  datatypes.rs  empty_result.rs  error.rs  exec.rs  info.rs  lib.rs  libpq.rs  notice.rs  postgres_data.rs  postgres_row.rs  pq.rs  queries_recv.rs  query.rs  query_error.rs  query_raw.rs  query_recv.rs  query_recv_error.rs  query_result.rs  raw.rs  raw_connection.rs  request.rs  request_error.rs  status.rs
src/datatypes/: boolean.rs  postgres_datetime.rs  primitive_number.rs  single_value_result.rs  string.rs  unit.rs
src/datatypes/postgres_datetime/: timestamp.rs
src/error/: connection_error.rs  postgres_data_error.rs  query_data_error.rs  query_error.rs  query_recv_error.rs  query_result_error.rs
src/raw/: connection_raw.rs  libpq.rs  misc.rs  query_raw.rs
