[package]
name = "seedpq"
version = "0.1.0"
edition = "2024"

[dependencies]
hybrid-array = "0.3.1"
libc = "0.2.174"
thiserror = "2.0.16"
derive = { path = "derive" }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
wtx = { git = "https://github.com/c410-f3r/wtx.git", features = ["postgres", "getrandom", "tokio"] }
rand_chacha = { features = ["os_rng"], version = "0.9" }
postgres = "0.19.10"

[build-dependencies]
pkg-config = "0.3.32"
bindgen = "0.72.0"

[lib]
crate-type = ["lib"]
bench = false

[[bench]]
name = "seedpq"
harness = false

[[bench]]
name = "wtx"
harness = false

[[bench]]
name = "sfackler_postgres"
harness = false
